--- a/converter/steel-bars-calculator/index.html
+++ b/converter/steel-bars-calculator/index.html
@@ -39,7 +39,7 @@
                         <span class="unit">m</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="plain-density" placeholder="Density (kg/m³)">
+                        <input type="number" id="plain-density" placeholder="Density (kg/m³)  Leave it blank if you don't know">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
