--- a/converter/steel-bars-calculator/index.html
+++ b/converter/steel-bars-calculator/index.html
@@ -39,7 +39,7 @@
                         <span class="unit">m</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="plain-density" placeholder="Density (kg/m³)  Leave it blank if you don't know">
+                        <input type="number" id="plain-density" placeholder="Density (kg/m³): Leave it blank if you don't know.">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                         <span class="unit">m</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="tmt-density" placeholder="Density (kg/m³)">
+                        <input type="number" id="tmt-density" placeholder="Density (kg/m³): Leave it blank if you don't know.">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                         <span class="unit">m</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="square-density" placeholder="Density (kg/m³)">
+                        <input type="number" id="square-density" placeholder="Density (kg/m³): Leave it blank if you don't know.">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                         <span class="unit">mm</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="gi-sheet-density" placeholder="Density (kg/m³)">
+                        <input type="number" id="gi-sheet-density" placeholder="Density (kg/m³): Leave it blank if you don't know.">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                         <span class="unit">mm</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="gi-rect-pipe-density" placeholder="Density (kg/m³)">
+                        <input type="number" id="gi-rect-pipe-density" placeholder="Density (kg/m³): Leave it blank if you don't know.">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                         <span class="unit">mm</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="iron-rect-pipe-density" placeholder="Density (kg/m³)">
+                        <input type="number" id="iron-rect-pipe-density" placeholder="Density (kg/m³): Leave it blank if you don't know.">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
                         <span class="unit">mm</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="gi-round-pipe-density" placeholder="Density (kg/m³)">
+                        <input type="number" id="gi-round-pipe-density" placeholder="Density (kg/m³): Leave it blank if you don't know.">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
                         <span class="unit">mm</span>
                     </div>
                     <div class="input-wrapper">
-                        <input type="number" id="iron-round-pipe-density" placeholder="Density (kg/m³)">
+                        <input type="number" id="iron-round-pipe-density" placeholder="Density (kg/m³): Leave it blank if you don't know.">
                         <span class="unit">kg/m³</span>
                     </div>
                 </div>
