--- a/converter/steel-bars-calculator/index.html
+++ b/converter/steel-bars-calculator/index.html
@@ -25,6 +25,7 @@
             <!-- Plain Bar -->
             <div class="calc-section" id="plain">
                 <h2>Plain Bar Calculator</h2>
+<p> Enter any two known values and press 'Calculate'.</p>
                 <div class="input-group">
                     <div class="input-wrapper">
                         <input type="number" id="plain-weight" placeholder="Weight (kg)">
@@ -49,6 +50,7 @@
             <!-- Deformed TMT Bar -->
             <div class="calc-section hidden" id="tmt">
                 <h2>Deformed TMT Bar Calculator</h2>
+<p>Enter any two known values and press 'Calculate'.</p>
                 <div class="input-group">
                     <div class="input-wrapper">
                         <input type="number" id="tmt-weight" placeholder="Weight (kg)">
@@ -73,6 +75,7 @@
             <!-- Square Bar -->
             <div class="calc-section hidden" id="square">
                 <h2>Square Bar Calculator</h2>
+<p>Enter any two known values and press 'Calculate'.</p>
                 <div class="input-group">
                     <div class="input-wrapper">
                         <input type="number" id="square-weight" placeholder="Weight (kg)">
@@ -97,6 +100,7 @@
             <!-- GI Sheet -->
             <div class="calc-section hidden" id="gi-sheet">
                 <h2>GI Sheet Calculator</h2>
+<p>Enter any three known values and press 'Calculate'.</p>
                 <div class="input-group">
                     <div class="input-wrapper">
                         <input type="number" id="gi-sheet-weight" placeholder="Weight (kg)">
@@ -125,6 +129,7 @@
             <!-- GI Rectangular Pipe -->
             <div class="calc-section hidden" id="gi-rect-pipe">
                 <h2>GI Rectangular Pipe Calculator</h2>
+<p>Enter any four known values and press 'Calculate'.</p>
                 <div class="input-group">
                     <div class="input-wrapper">
                         <input type="number" id="gi-rect-pipe-weight" placeholder="Weight (kg)">
@@ -157,6 +162,7 @@
             <!-- Iron Rectangular Pipe -->
             <div class="calc-section hidden" id="iron-rect-pipe">
                 <h2>Iron Rectangular Pipe Calculator</h2>
+<p>Enter any four known values and press 'Calculate'.</p>
                 <div class="input-group">
                     <div class="input-wrapper">
                         <input type="number" id="iron-rect-pipe-weight" placeholder="Weight (kg)">
@@ -189,6 +195,7 @@
             <!-- GI Round Pipe -->
             <div class="calc-section hidden" id="gi-round-pipe">
                 <h2>GI Round Pipe Calculator</h2>
+<p>Enter any three known values and press 'Calculate'.</p>
                 <div class="input-group">
                     <div class="input-wrapper">
                         <input type="number" id="gi-round-pipe-weight" placeholder="Weight (kg)">
@@ -217,6 +224,7 @@
             <!-- Iron Round Pipe -->
             <div class="calc-section hidden" id="iron-round-pipe">
                 <h2>Iron Round Pipe Calculator</h2>
+<p>Enter any three known values and press 'Calculate'.</p>
                 <div class="input-group">
                     <div class="input-wrapper">
                         <input type="number" id="iron-round-pipe-weight" placeholder="Weight (kg)">
