--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                 <a href="converter/unit converter/" class="box">Unit Converter</a>
                 <a href="Load-calculator/" class="box">Load Calculator</a>
 		<a href="converter/concrete-calculator" class="box">Concrete Calculator</a>
-		<a href="converter/steel-bars-calculator" class="box">Steel Bar Calculator</a>
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
+		<a href="converter/steel-bars-calculator" class="box">Steel and GI Calculator</a>
                 <a href="time-series-chart-animation/" class="box">Animated Time-Series Chart</a>
             </div>
         </div>
