--- a/converter/steel-bars-calculator/index.html
+++ b/converter/steel-bars-calculator/index.html
@@ -16,12 +16,12 @@
     <meta property="og:description" content="Calculate weight, dimensions, and density for steel and GI materials like bars, pipes, and angles. Free and easy to use.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://krishnaniraula.com.np/converter/steel-bars-calculator/">
-    <meta property="og:image" content="/assets/logo/og-image.png">
+    <meta property="og:image" content="/assets/image/og-image.png">
   
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Steel & GI Calculator - Weight and Dimension Tool">
     <meta name="twitter:description" content="Calculate weight, dimensions, and density for steel and GI materials like bars, pipes, and angles. Free and easy to use.">
-    <meta name="twitter:image" content="/assets/logo/og-image.png">
+    <meta name="twitter:image" content="/assets/image/og-image.png">
 </head>
 <body>
     <header>
