--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="nav-right">
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
         <ul id="menu">
-            <li><a href="/time-series-chart-animation/" class="no-deco">Animate Time-series Data</a></li>
+            <li><a href="#tools" class="no-deco">Tools</a></li>
             <li class="dropdown">Apps
                 <ul class="dropdown-content">
                     <li class="dropdown">Caputok
