--- a/converter/concrete-calculator/index.html
+++ b/converter/concrete-calculator/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:title" content="Concrete Calculator - Estimate Concrete and Cement Mortar">
     <meta name="twitter:description" content="Easily estimate concrete and cement mortar requirements with our Concrete Calculator. Perfect for construction projects, DIY enthusiasts, and professionals.">
     <meta name="twitter:image" content="https://krishnaniraula.com.np/assets/images/concrete-calculator.jpg">
-    <link rel="canonical" href="https://yourwebsite.com/concrete-calculator">
+    <link rel="canonical" href="https://krishnaniraula.com.np/converter/concrete-calculator/">
     <title>Concrete Calculator - Estimate Concrete and Cement Mortar</title>
  
     <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
