--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-7909865065068819">
-    <meta name="description" content="Useful tools, land area converter, time series data visualization, and more. Explore various utilities to simplify calculations and data analysis.">
+    <meta name="description" content="Useful tools, land area converter, time series data visualization, concrete estimate, wall materials estimate, unit converter, steel and GI weight, length, dimensions calculator, finder, and more. Explore various utilities to simplify calculations and data analysis.">
     <title>Welcome to Krishna's Website - Data Visualization & Tools</title>
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
     <link rel="manifest" href="/manifest.json">
