--- a/converter/steel-bars-calculator/index.html
+++ b/converter/steel-bars-calculator/index.html
@@ -6,7 +6,7 @@
     
   
     <title>Steel & GI Calculator - Weight, Dimensions & Density Calculator</title>
-    <meta name="description" content="Accurately calculate weight, dimensions, and density for steel and GI materials. Free online tool for bars, pipes, sheets, and angles. Ideal for engineers, contractors, and fabricators.">
+    <meta name="description" content="Calculate weight, dimensions, and density for steel and GI materials. Free tool for bars, pipes, sheets, and angles. Ideal for engineers and contractors.">
     
  
     <meta name="keywords" content="steel calculator,square pipe calculator, rectangle pipe, GI weight calculator, steel bar weight calculator, iron pipe weight calculator, steel density calculator, sheet metal calculator, construction material calculator">
