--- a/converter/concrete-calculator/index.html
+++ b/converter/concrete-calculator/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Accurately estimate cement, sand, and aggregate for concrete and mortar. Ideal for construction projects, builders, and DIY enthusiasts. Try our free Concrete Calculator!">
+    <meta name="description" content="Accurately estimate cement, sand, and aggregate for concrete and mortar. Ideal for construction projects, builders, and DIY enthusiasts.">
     <meta name="keywords" content="concrete calculator, cement mortar calculator, brick estimate tool, construction material calculator, cement sand ratio, mortar mix calculator, building material estimator, plastering cement estimate">
     <meta name="author" content="Krishna Niraula">
   
