--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             </div>
             <div class="intro-text">
                 <h1>Welcome to Krishna's Website</h1>
-                <p>Here you will find various resources and information.</p>
-            </div>
+                <p>Explore various tools, including land area converters, concrete material calculators, steel and GI rod estimators, and much more. Discover resources to simplify construction, engineering, and data analysis tasks.</p>
+             </div>
         </div>
    
   
